调整feed cursor逻辑
